# Python-FastAPI-test-repo

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  code-quality.yml  security-scan.yml
app/: config.py  dependencies.py  main.py
app/controllers/: auth_controller.py  task_controller.py
app/db/: database.py
app/middlewares/: auth_middleware.py
app/models/: base.py  task.py  user.py
app/routes/: auth.py  tasks.py
app/services/: auth_service.py  discount_manager.py  payment_service.py  session_manager.py  task_service.py  user_service.py
app/tests/: test_auth.py  test_payment.py  test_tasks.py
